# cython_wrapper_example

./: .gitignore  CMakeLists.txt
foo_sdk/: CMakeLists.txt  foo_c_api.cc  foo_c_api.h  foo_def.h
py_foo/: foo.pxd  py_foo_wrapper.pyx  setup.py
py_foo/py_foo_imp/: __init__.py  py_foo_imp.py
